--- a/app/static/images/graph.html
+++ b/app/static/images/graph.html
@@ -1,6 +1,7 @@
 <html>
 <head><meta charset="utf-8" /></head>
 <body>
+    <div id="graph-dm">
     <div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
         <script type="text/javascript">/**
 * plotly.js v2.27.0
